unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/LH__LH_Use_Case_Library__mdt.object-meta.xml
<CustomObject>
    <label>Lookup Helper Use Case Library</label>
    <pluralLabel>Lookup Helper Use Case Libraries</pluralLabel>
</CustomObject>