unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/fields/LH__Child_Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>LH__Child_Filter_Conditions__c</fullName>
    <label>Filter Conditions</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>