unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/fields/LH__Child_Object__c.field-meta.xml
<CustomField>
    <fullName>LH__Child_Object__c</fullName>
    <label>Child Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>