unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/fields/LH__Components_Included__c.field-meta.xml
<CustomField>
    <fullName>LH__Components_Included__c</fullName>
    <label>Components Included</label>
    <length>255</length>
    <type>Text</type>
</CustomField>