unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/fields/LH__Description__c.field-meta.xml
<CustomField>
    <fullName>LH__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>