unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/fields/LH__FieldType__c.field-meta.xml
<CustomField>
    <fullName>LH__FieldType__c</fullName>
    <label>FieldType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>