unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/fields/LH__Label__c.field-meta.xml
<CustomField>
    <fullName>LH__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>