unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/fields/LH__Long_Description__c.field-meta.xml
<CustomField>
    <fullName>LH__Long_Description__c</fullName>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>