unpackaged/main/default/objects/LH__LH_Use_Case_Library__mdt/fields/LH__Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>LH__Relationship_Field__c</fullName>
    <label>Relationship Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>